{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 40,
  "lineage": "78ea1b10-1c47-1760-8bbe-a9d51d8fef5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ebc799366893bb32",
            "domain": "vpc",
            "id": "eipalloc-0a7f7878f00a6ae90",
            "network_border_group": "us-east-1",
            "network_interface": "eni-077607d00cf2bdd39",
            "private_dns": "ip-10-0-1-5.ec2.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-44-196-33-252.compute-1.amazonaws.com",
            "public_ip": "44.196.33.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b9259c69d8ed7f3",
            "arn": "arn:aws:ec2:us-east-1:336984922346:instance/i-0839ec517fdc8139b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0839ec517fdc8139b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0960ab1c609dc6891",
            "private_dns": "ip-10-0-1-127.ec2.internal",
            "private_ip": "10.0.1.127",
            "public_dns": "ec2-3-93-35-169.compute-1.amazonaws.com",
            "public_ip": "3.93.35.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 200,
                "throughput": 0,
                "volume_id": "vol-076fba917ef82aa8c",
                "volume_size": 8,
                "volume_type": "io1"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4b7d35bf6edd15a",
            "tags": {
              "Name": "demoinstance"
            },
            "tags_all": {
              "Name": "demoinstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b74c4f43be4a285"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "aws_security_group.sg_allow_ssh",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_terraform_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b9259c69d8ed7f3",
            "arn": "arn:aws:ec2:us-east-1:336984922346:instance/i-01c44efa9385f12f4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c44efa9385f12f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07abec9696bcfaade",
            "private_dns": "ip-10-0-2-113.ec2.internal",
            "private_ip": "10.0.2.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 200,
                "throughput": 0,
                "volume_id": "vol-0cbadbf9a46f1f970",
                "volume_size": 8,
                "volume_type": "io1"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e76764f3759a724",
            "tags": {
              "Name": "demoinstance_private"
            },
            "tags_all": {
              "Name": "demoinstance_private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b74c4f43be4a285"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "aws_security_group.sg_allow_ssh",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336984922346:internet-gateway/igw-0a40fd3d00a5aeb99",
            "id": "igw-0a40fd3d00a5aeb99",
            "owner_id": "336984922346",
            "tags": {
              "Name": "gw_terraform"
            },
            "tags_all": {
              "Name": "gw_terraform"
            },
            "vpc_id": "vpc-03ee3bbd9c967e0c4"
          },
          "dependencies": [
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7f7878f00a6ae90",
            "connectivity_type": "public",
            "id": "nat-0d5f4071ccbc7d375",
            "network_interface_id": "eni-077607d00cf2bdd39",
            "private_ip": "10.0.1.5",
            "public_ip": "44.196.33.252",
            "subnet_id": "subnet-0e4b7d35bf6edd15a",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.terraform_ip",
            "aws_internet_gateway.gw_terraform",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336984922346:route-table/rtb-0dcb3a82e40fa8eb4",
            "id": "rtb-0dcb3a82e40fa8eb4",
            "owner_id": "336984922346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5f4071ccbc7d375",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_table_private"
            },
            "tags_all": {
              "Name": "terraform_table_private"
            },
            "vpc_id": "vpc-03ee3bbd9c967e0c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform_ip",
            "aws_internet_gateway.gw_terraform",
            "aws_nat_gateway.terra_nat",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336984922346:route-table/rtb-0917721501b949ec9",
            "id": "rtb-0917721501b949ec9",
            "owner_id": "336984922346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a40fd3d00a5aeb99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_table_public"
            },
            "tags_all": {
              "Name": "terraform_table_public"
            },
            "vpc_id": "vpc-03ee3bbd9c967e0c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_terraform",
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_terraform_demo_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007945dece0624949",
            "route_table_id": "rtb-0dcb3a82e40fa8eb4",
            "subnet_id": "subnet-04e76764f3759a724"
          },
          "dependencies": [
            "aws_eip.terraform_ip",
            "aws_internet_gateway.gw_terraform",
            "aws_nat_gateway.terra_nat",
            "aws_route_table.terraform_table_private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_terraform_demo_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0256f22bc061b168b",
            "route_table_id": "rtb-0917721501b949ec9",
            "subnet_id": "subnet-0e4b7d35bf6edd15a"
          },
          "dependencies": [
            "aws_internet_gateway.gw_terraform",
            "aws_route_table.terraform_table_public",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336984922346:security-group/sg-07b74c4f43be4a285",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b74c4f43be4a285",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "336984922346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_allow_ssh"
            },
            "tags_all": {
              "Name": "sg_allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ee3bbd9c967e0c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336984922346:subnet/subnet-04e76764f3759a724",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04e76764f3759a724",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336984922346",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-03ee3bbd9c967e0c4"
          },
          "dependencies": [
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336984922346:subnet/subnet-0e4b7d35bf6edd15a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e4b7d35bf6edd15a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "336984922346",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-03ee3bbd9c967e0c4"
          },
          "dependencies": [
            "aws_vpc.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336984922346:vpc/vpc-03ee3bbd9c967e0c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1f4c7bbee78cc2d",
            "default_route_table_id": "rtb-0098045105b53c01e",
            "default_security_group_id": "sg-074f75ea1c1dd2500",
            "dhcp_options_id": "dopt-5465472e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03ee3bbd9c967e0c4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0098045105b53c01e",
            "owner_id": "336984922346",
            "tags": {
              "Name": "terraform_demo"
            },
            "tags_all": {
              "Name": "terraform_demo"
            }
          }
        }
      ]
    }
  ]
}